Se actualizan recursos en el storage

--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -42,11 +42,11 @@
     </ui:define>
     <ui:define name="contenido">
         <ui:remove>
-            <h:outputStylesheet library="css" name="tablas.css"/>
-            <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
-            <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
-            <h:outputStylesheet library="css" name="administracion/coordinador.css"/>
-            <h:outputStylesheet library="css" name="/administracion/estilo-tarjeton-licencia.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/scroll-esquadron.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/dashboard.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/coordinador.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/estilo-tarjeton-licencia.css"/>
         </ui:remove>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/scroll-esquadron.css"/>
