--- a/tecolotl-web/src/main/webapp/colaborador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/dashboard.xhtml
@@ -17,9 +17,9 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
     <title>Actividades</title>
-    <h:outputStylesheet library="css" name="uikit.css"/>
-    <h:outputStylesheet library="css" name="tablas.css"/>
-    <h:outputStylesheet library="css" name="colaborador/actividad.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/colaborador/actividad.css"/>
 
 </h:head>
 
@@ -235,8 +235,8 @@
             </h:form>
         </div>
     </div>
-    <h:outputScript library="js" name="uikit.js"/>
-    <h:outputScript library="js" name="uikit-icons.js"/>
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit.js"/>
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit-icons.js"/>
 </h:body>
 
 
