--- a/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
@@ -10,10 +10,10 @@
 
 <h:head>
     <title>Dashboard</title>
-    <h:outputStylesheet library="css" name="uikit.css"/>
-    <h:outputStylesheet library="css" name="tablas.css"/>
-    <h:outputStylesheet library="css" name="/colaborador/detalle-actividad.css"/>
-    <h:outputStylesheet library="css" name="/colaborador/glosario.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/colaborador/detalle-actividad.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/colaborador/glosario.css"/>
 </h:head>
 
 <f:metadata>
@@ -233,7 +233,7 @@
             </h:form>
         </div>
     </h:panelGroup>
-    <h:outputScript library="js" name="uikit.js"/>
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit.js"/>
     <h:outputScript library="js" name="uikit-icons.js"/>
 <!--    <h:outputScript library="js" name="colaborador/tam-archivo.js"/>-->
     <h:outputScript library="js" name="/colaborador/custom-file-input.js"/>
