--- a/tecolotl-web/src/main/webapp/profesor/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/coordinador.xhtml
@@ -25,7 +25,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/coordinador/coordinador.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/coordinador/coordinador.css"/>
         <div class="seccion-principal">
             <div>
                 <div class="card">
