--- a/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
@@ -36,9 +36,9 @@
     </ui:define>
     <ui:define name="contenido">
         <ui:remove>
-        <h:outputStylesheet library="css" name="tablas.css"/>
-        <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
-        <h:outputStylesheet library="css" name="/administracion/date-picker.css"/>
+         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
+         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/dashboard.css"/>
+             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/date-picker.css"/>
         </ui:remove>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/dashboard.css"/>
