--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
 	<meta name="google" content="notranslate"/>
 	<!--	<meta property="o"-->
-	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
+	<link  rel="shortcut icon"  href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/favicon.ico"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<meta name="description" content="Somos la mejor videoteca digital con actividades interactivas, descargables e imprimibles. ¡Tus alumnos  aprenderán con sus videos favoritos de Youtube en un ambiente 100% académico! +1000 actividades. Recursos para Grammar. Perfecto para laboratorios o homeschool."/>
 	<meta name="keywords" content="ELT,englishworksheet,grammarworksheet,videoclass,homeschool,english,Plataforma educativa,inglés,flashcards"/>
